# django-matome

./: README.md  README.rst  setup.cfg  setup.py
django_matome.egg-info/: PKG-INFO  SOURCES.txt
matome/management/commands/: _code_stats.py  matome.py
